--- a/.github/workflows/deploy.page.yaml
+++ b/.github/workflows/deploy.page.yaml
@@ -36,6 +36,7 @@ jobs:
           write-mode: overwrite
 
       - name: Deploy 🚀
+        if: always()
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: test-log # The folder the action should deploy.
